# bhr

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs
src/shaders/: blackhole_hdr.wgsl  blackhole_ldr.wgsl
