[package]
name = "bhr"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
rayon = "1.10"
glam = "0.32.0"
rand = "0.10.0"
noise = "0.9"
wgpu = "28.0.0"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }

# cuda is optional until you actually install toolkit
cudarc = { version = "0.19", optional = true, features = ["cuda-13010"] }

[features]
default = []
cuda = ["cudarc"]
