[package]
name = "bhr"
version = "0.3.27"
edition = "2024"

[dependencies]
image = "0.25"
rayon = "1.12"
glam = "0.33.0"
rand = "0.10.0"
noise = "0.9"
wgpu = "29.0.3"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
exr = "1.74.0"

# cuda is optional until you actually install toolkit
cudarc = { version = "0.19", optional = true, features = ["cuda-13010"] }

[features]
default = []
cuda = ["cudarc"]
